# atmcirctools

./: .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  _CMakeLists.txt  dev-environment.yml  dev-requirements.in  environment.yml  mypy.ini  pyproject.toml  requirements.in  run-mypy.sh  setup.py
.github/workflows/: pre-commit-conda.yml.disabled  precommit-conda.yml  precommit.yml
links/: README.md  atmcirclib
minimal_build_examples/skbuild/: CMakeLists.txt  setup.py
minimal_build_examples/skbuild/src/hello/: __init__.py  __main__.py  hello.f90  hello.pyi
recipe/: meta.yaml
recipe/v0.1.0/: meta.yaml
recipe/v0.2.0/: meta.yaml
resources/fortran/: deriv.f90  deriv_openmp.f
src/atmcirctools/: __init__.py
src/dpv_th/: __init__.py
src/dpv_th/deriv/: __init__.py  _deriv_f77.f  _deriv_f77.pyi  _deriv_f90.f90  _deriv_f90.pyi  f77.py  f90.py
src/dpv_th/intp/: __init__.py  gt_level_interpolator.py
test/: get_data.sh  test.sh  test_full.sh  test_quick.sh
tests/test_dpv_th/test_intp/: test_level_interpolator.py
tests/test_dpv_th/test_test_gt4py/: test_basics.py
tests/test_gt4py/: test_basics.py  test_stencils.py
